# eecs583-LSLP

./: CMakeLists.txt  README.md  demo.sh  run.sh
LSLP/: CMakeLists.txt  LSLPVectorizer.cpp
benchmarks/: slp_test1.bc  slp_test1.cpp  test1.c  test1_correctness.c  test2.c  test2_correctness.c  test3.c  test3_correctness.c  test4.c  test4_correctness.c  test5.c
